[gd_scene load_steps=2 format=3 uid="uid://d1vkjj3tcx30h"]

[ext_resource type="Script" uid="uid://cu2am3nv2kvuq" path="res://ui/main_menu/upgrade_pack_button.gd" id="1_b8h6l"]

[node name="UpgradePackButton" type="PanelContainer"]
custom_minimum_size = Vector2(100, 100)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_b8h6l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="IconRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="SelectButton" type="CheckButton" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
